# ppx_arrow

ppx/: arrow_ppx.ml  dune  mediator.ml  mediator.mli
ppx_test/: bad.expected  bad.ml  dune  pp.ml  test.expected  test.ml
src/: arrow_syntax.ml  ast_intf.ml  dune
test/: dune  testing.ml  testing.mli
